--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
         <link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
         <!--===============================================================================================-->
         <link rel="stylesheet" type="text/css" href="assets/css/util.css">
-
+        <link rel="stylesheet" href="assets/css/style.css">
         <!--===============================================================================================-->
-        <title>React App</title>
+        <title>Городской туризм</title>
     </head>
     <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -53,6 +53,16 @@
         apiId: 6970122
       });
     </script>
+
+    <script src="assets/js/popper.js"></script>
+    <script src="assets/js/stellar.js"></script>
+
+    <script src="assets/js/owl-carousel-thumb.min.js"></script>
+
+    <!--gmaps Js-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+    <script src="assets/js/gmaps.min.js"></script>
+    <script src="assets/js/theme.js"></script>
     <div id="root"></div>
     </body>
     </html>
